[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["khachatur <khachatur.khachatryan@softconstruct.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
fastapi = "^0.101.1"
pytest = "^7.4.4"
uvicorn = {extras = ["standart"], version = "^0.25.0"}
pydantic = {extras = ["email"], version = "^2.5.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
